--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@300&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@300&family=Roboto:wght@300&family=Open+Sans+Condensed:wght@300;700&display=swap');
 
 
 * {
@@ -23,14 +23,32 @@ body {
   font-weight: bold;
   font-size: 2rem;
   padding-top: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.navbar-nav .nav-link {
+.nav-link {
   color: #fff !important;
   font-size: 1.1rem;
-  cursor: pointer;
-  padding-top: 2rem;
+  margin: 10px;
+  padding: 5px;
   font-weight: bold;
+  position: relative;
+}
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in;
+}
+
+.nav-link:hover::after {
+  transform: scaleX(.3);
 }
 
 .box {
@@ -52,8 +70,8 @@ body {
 
 
 #google_man {
-  padding: 7% 10%;
-  margin: 5rem;
+  padding: 7% 15%;
+  margin: 0 5rem;
 }
 
 .lead-box {
@@ -73,10 +91,59 @@ body {
   font-size: 2.5rem;
 }
 
+.spread {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 60px;
+}
+
+.create {
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+
+.see {
+  width: 15%;
+  height: 100%;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  margin: 10px;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 700;
+  background: #fff;
+}
+
+.see:hover {
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
 .group-image {
   position: relative;
   padding: 10px;
+  position: relative;
   cursor: pointer;
+}
+
+.group-image::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
+
+.group-image:hover::after {
+  color: #000;
+  opacity: 1;
 }
 
 .text {
@@ -85,10 +152,41 @@ body {
   bottom: 30px;
   left: 60px;
   text-transform: uppercase;
- width: 10px;
- font-family: 'Roboto', sans-serif;
+  width: 5px;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+.group-image:hover .overlay {
+  opacity: 1;
 }
 
 #creations {
-  padding-top: 0;
+  padding: 7% 15%;
+}
+
+.foot {
+  background: #000;
+  color: #fff;
+  padding: 7% 15%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+} 
+
+ul {
+  list-style: none;
+}
+
+.menu {
+  display: flex;
+  padding: 5px;
+
+}
+
+.social-icons {
+  display: flex;
+  justify-content: space-evenly;
+  flex-flow: end;
+  padding-bottom: 25px;
 }
